ux2 calendar: land the remaining calendar views. The css still needs ironing.

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -365,7 +365,7 @@
           line-height: 1.5em;
         }
         td .cal_stack {
-          background: url("images/cal_event_bg.png") 0 0 no-repeat;
+          background: url("../img/cal_event_bg.png") 0 0 no-repeat;
         }
         th .cal_time_label {
           height: 51px;
@@ -424,7 +424,7 @@
       position: absolute;
       top: 20px;
       left: 40px;
-      background: url("images/cal_time.png") 0 0 no-repeat;
+      background: url("../img/cal_time.png") 0 0 no-repeat;
       font-size: 1%;
       line-height: 1em;
       z-index: 3;
@@ -901,13 +901,13 @@
       line-height: 1.2em;
     }
     .cal_month .tooltip {
-      background: url("images/cal_tooltip_right.png") no-repeat;
+      background: url("../img/cal_tooltip_right.png") no-repeat;
     }
     .cal_week .cal_hour_event .tooltip {
-      background: url("images/cal_tooltip_white.png") no-repeat;
+      background: url("../img/cal_tooltip_white.png") no-repeat;
     }
     .cal_week .tooltip {
-      background: url("images/cal_tooltip_left.png") no-repeat;
+      background: url("../img/cal_tooltip_left.png") no-repeat;
     }
     .cal_week .cal_hour_event .tooltip {
       font-size: 95%;
