ux2 calendar: list view style fixes

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -44,11 +44,18 @@
             border: 0 none;
             td {
                 border: 0 none;
+                &.cal_agenda_time {
+                    width: 15%;
+                }
             }
             th {
+                width: 15%;
                 background-color: transparent;
-                color: #222222;
-                text-shadow: 0;
+                a, a:visited {
+                    color: @linkColor;
+                    text-shadow: 0;
+                }
+
             }
         }
 
