ux2 calendar: day/week view style fixes

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -325,7 +325,8 @@
 
     table.cal-body, table.cal-scroll-body {
         border-collapse: collapse;
-        margin-left: 1px;
+        //margin-left: 1px;
+        margin: 0;
 
         th,
         td {
@@ -446,7 +447,7 @@
     /* hours of the day */
     .cal_hours_scroll {
       //width: 665px;
-      width: 668px;
+      width: 667px;
       height: 572px;
       overflow-y: scroll;
       overflow-x: hidden;
@@ -654,7 +655,7 @@
     /** =CALENDAR WEEK VIEW
     ----------------------------------------------- */
     .cal_week {
-      border-top: 1px solid #e6e6e6;
+        border: 0 none;
     }
     .cal_week th {
       border-left: 0;
@@ -1026,7 +1027,7 @@
         /* hours of the day */
         .cal_hours_scroll {
           /*width: 665px;*/
-          /* ... width: 896px; */
+          // ... width: 896px;
           width: 900px;
         }
         /* current time */
