--- a/karl/views/static/ux2/css/elements/pushdowns.less
+++ b/karl/views/static/ux2/css/elements/pushdowns.less
@@ -148,7 +148,7 @@
 }
 .panel {
     position: relative;
-    .col(4.5);
+    .col(6);
     #sections {
         .messageCounter {
             float: right;
@@ -156,12 +156,12 @@
         }
     }
 }
-.panel:first-of-type {
-    .col(2.5);
-}
-.panel:last-of-type {
-    .col(5);
-}
+// .panel:first-of-type {
+//     .col(2.5);
+// }
+// .panel:last-of-type {
+//     .col(5);
+// }
 .updating {
     opacity: 0;
     display: inline-block;
