--- a/karl/ux2/microtemplates/chatter.mustache
+++ b/karl/ux2/microtemplates/chatter.mustache
@@ -1,38 +1,37 @@
 <div id="chatter-panel">
   <div class="pushdownContent clearfix">
-    <div id="on-your-mind" class="panel">
-      <h3>On your mind</h3>
-      <form class="form-stacked" action="{{chatter_url}}/add_chatter.html" method="POST">
-        <div class="control-group clearfix">
-          <div class="controls">
-            <textarea id="chatter-panel-text" name="text"></textarea>
-            <p class="help-block tips">Tips: Use @username, #tag, and #this for this page</p>
-          </div>
-          <div class="actions">
-            <div class="btn-group">
-              <button id="speak" type="submit" class="btn btn-small">Speak</button>
-            </div>
-          </div>
-        </div>
-      </form>
-      <div class="houstonWeHaveAProblem notification info">
-        <strong>Something went wrong.</strong>
-        <p>We could not update the messages for you. But don't you
-           worry, we'll try again as soon as possible.</p>
-      </div>
-      <a id="goto-chatter" class="btn btn-small btn-primary goto" href="{{chatter_url}}" title="Go to Chatter">Go to Chatter</a>
-    </div>
     {{#streams}}
     <div id="{{class}}" class="panel">
       <div class="panel-header">
         <h3>{{title}}<span class="updating">Updating&hellip;</span></h3>
         <div class="post-options">
-          <a href="{{has_more_news_url}}" class="new-post" title="New Post">
+          <a href="#" class="add-new-post" title="New Post">
             New Post
           </a>
           <a href="{{has_more_news_url}}" class="view-all-posts" title="View All Posts">
             View All Posts
           </a>
+        </div>
+        <div class="new-post">
+          <form class="form-stacked" action="{{chatter_url}}/add_chatter.html" method="POST">
+
+            <div class="control-group clearfix">
+              <div class="controls">
+                <textarea id="{{class}}-panel-text" name="text" class="new-post-text"></textarea>
+                <p class="help-block tips">Tips: Use @username, #tag, and #this for this page</p>
+              </div>
+              <div class="actions">
+                <div class="btn-group">
+                  <button id="speak" type="submit" class="btn btn-small">Speak</button>
+                </div>
+              </div>
+            </div>
+          </form>
+          <div class="houstonWeHaveAProblem notification info">
+            <strong>Something went wrong.</strong>
+            <p>We could not update the messages for you. But don't you
+              worry, we'll try again as soon as possible.</p>
+          </div>
         </div>
       </div>
       {{#items}}
