--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -643,27 +643,25 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 #chatter-user-info img{float:left;margin-right:10px;}
 .chatter-options-panel{font-size:0.9em;clear:both;margin-top:16px;opacity:0;}
 .panel-header{position:relative;}.panel-header .post-options{position:absolute;top:.6em;right:.73em;font-size:0.7em;font-weight:normal;vertical-align:text-bottom;}.panel-header .post-options a:hover{text-decoration:underline;}
-.panel-header .post-options .add-new-post{margin-right:5px;}
+.panel-header .post-options .add-new-post{margin-right:10px;}
 .panel-header .new-post{display:none;}.panel-header .new-post form{margin-bottom:5px;}
 .panel-header .new-post .new-post-text{width:100%;height:100px;font-size:0.8em;}
 .panel-header .new-post .help-block{width:100%;color:#555555;}
 .panel-header .new-post .actions{margin-top:15px;}
-.panel-item-header{position:absolute;top:.5em;right:.73em;}
+.panel-item-header{position:absolute;top:.5em;right:.73em;}.panel-item-header .timeago,.panel-item-header .post-options{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.8em;padding:2.5px 5px;color:#000000;display:block;}
+.panel-item-header .post-options{background-color:#e2e2e2;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:none;}.panel-item-header .post-options a{color:#000000;display:inline-block;padding:0 5px;text-align:center;vertical-align:middle;}.panel-item-header .post-options a:hover{text-decoration:underline;}
+.panel-item-header .post-options a i{padding-right:5px;}
+.panel-item-header .post-options .view-more,.panel-item-header .post-options .view-less{display:none;}
 .panel-item-content{margin-left:48px;padding-left:.73em;min-height:48px;}.panel-item-content a{color:#3d8fb3;}
 .panel-item-content p{margin-bottom:0;}
 .panel-item-content .fullname{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:bold;}
-.panel-item-content .timeago-date,.panel-item-content .post-options{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.8em;padding:5px 10px;display:block;}
-.panel-item-content .post-options{color:#000000;background-color:#e2e2e2;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:none;}.panel-item-content .post-options a{color:#000000;display:inline-block;padding:0 5px;text-align:center;vertical-align:middle;}.panel-item-content .post-options a:hover{text-decoration:underline;}
-.panel-item-content .post-options a i{padding-right:5px;}
 .panel-item-content .reply i,.panel-item-content .repost i{padding-right:5px;}
 .panel-item-content .quip{padding:5px 0 10px;}
 .panel-item-content .repost-box,.panel-item-content .reply-box{margin-top:10px;padding:10px;background:#e2e2e2;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:none;}.panel-item-content .repost-box form,.panel-item-content .reply-box form{padding:0;margin:0;}
 .panel-item-content .repost-box .control-group,.panel-item-content .reply-box .control-group{padding-bottom:0;}
 .panel-item-content .repost-box{text-align:center;}
-.panel-item-footer{display:block;font-size:0.8em;}.panel-item-footer .view-options{float:right;padding:2px;margin-top:5px;color:#000000;text-align:right;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;background-color:#d5d5d5;}.panel-item-footer .view-options a{color:#000000;display:inline-block;padding:0 5px;text-align:center;vertical-align:middle;}.panel-item-footer .view-options a:hover{text-decoration:underline;}
-.panel-item-footer .view-options a i{padding-right:5px;}
-.panel-item-footer .view-options .view-more,.panel-item-footer .view-options .view-less{display:none;}
-.newMessage .panel-item-footer .view-options{background-color:#e3d3a9;}
+.panel-item-footer{display:block;font-size:0.8em;}
+.newMessage .panel-item-header .post-options{background-color:#e9ddbd;}
 .original-quip,.conversation-controls{display:none;}
 #radar-panel{position:relative;overflow:hidden;padding:.889em;background-color:#aaaaaa;background-image:url('../img/vertical_stripes.png');background-position:top left;background-repeat:repeat;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;}#radar-panel:before{content:"";font-size:0;position:absolute;top:0;left:-25%;width:150%;height:100%;-webkit-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);-moz-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);pointer-events:none;}
 #radar-panel .thereIsMore{text-shadow:0 1px 0 rgba(255, 255, 255, 0.4);}
