--- a/karl/ux2/microtemplates/chatter_post_partial.mustache
+++ b/karl/ux2/microtemplates/chatter_post_partial.mustache
@@ -2,8 +2,8 @@
   <div class="panel-item-header">
     <div class="timeago" title="{{info}}">{{info}}</div>
     <div class="post-options">
-      <a class="view-more" href="#"><i class="icon-plus"></i>View more</a>
-      <a class="view-less" href="#"><i class="icon-minus"></i>View less</a>
+      <a class="view-more" href="#"><i class="icon-plus"></i>Show more</a>
+      <a class="view-less" href="#"><i class="icon-minus"></i>Show less</a>
       <a class="view" href="{{message_url}}"><i class="icon-eye-open"></i>View</a>
     </div>
   </div>
