added basic chatter pushdown post via ajax

--- a/karl/ux2/microtemplates/chatter.mustache
+++ b/karl/ux2/microtemplates/chatter.mustache
@@ -13,7 +13,7 @@
           </a>
         </div>
         <div class="new-post">
-          <form class="form-stacked" action="{{chatter_url}}/add_chatter.html" method="POST">
+          <form id="chatter-post-form" class="form-stacked" action="{{chatter_url}}/add_chatter.html" method="POST">
 
             <div class="control-group clearfix">
               <div class="controls">
