--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -569,7 +569,7 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 .pushdownContent a{color:#222222;}
 .pushdownContent a.goto{color:#eadecc;}
 .pushdownContent h3{margin-top:0;font-size:1.18em;font-weight:bold;text-shadow:0 1px 0 rgba(255, 255, 255, 0.3);position:relative;}
-.pushdownContent .avatar{position:absolute;left:.73em;top:.73em;}
+.pushdownContent .avatar{width:48px;height:auto;}
 .pushdownContent .messagewrapper{height:3.2em;overflow:hidden;}
 .pushdownContent .messagewrapper-view-all{height:auto;overflow:visible;}
 .pushdownContent .messagetext{display:block;line-height:normal;font-size:0.9em;}
@@ -648,11 +648,7 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 .panel-header .new-post .new-post-text{width:100%;height:100px;font-size:0.8em;}
 .panel-header .new-post .help-block{width:100%;color:#555555;}
 .panel-header .new-post .actions{margin-top:15px;}
-.panel-item-header{position:absolute;top:.5em;right:.73em;}.panel-item-header .timeago,.panel-item-header .post-options{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.8em;padding:2.5px 5px;color:#000000;display:block;}
-.panel-item-header .post-options{background-color:#e2e2e2;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:none;}.panel-item-header .post-options a{color:#000000;display:inline-block;padding:0 5px;text-align:center;vertical-align:middle;}.panel-item-header .post-options a:hover{text-decoration:underline;}
-.panel-item-header .post-options a i{padding-right:5px;}
-.panel-item-header .post-options .view-more,.panel-item-header .post-options .view-less{display:none;}
-.panel-item-content{margin-left:48px;padding-left:.73em;min-height:48px;}.panel-item-content a{color:#3d8fb3;}
+.panel-item-content{position:relative;margin-left:48px;padding-left:.73em;}.panel-item-content a{color:#3d8fb3;}
 .panel-item-content p{margin-bottom:0;}
 .panel-item-content .fullname{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:bold;}
 .panel-item-content .reply i,.panel-item-content .repost i{padding-right:5px;}
@@ -660,9 +656,17 @@ body>footer{border-top:2px solid #bcb3a8;background-color:#8f806f;color:#fff;tex
 .panel-item-content .repost-box,.panel-item-content .reply-box{margin-top:10px;padding:10px;background:#e2e2e2;-webkit-border-radius:0.5em;-moz-border-radius:0.5em;border-radius:0.5em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:none;}.panel-item-content .repost-box form,.panel-item-content .reply-box form{padding:0;margin:0;}
 .panel-item-content .repost-box .control-group,.panel-item-content .reply-box .control-group{padding-bottom:0;}
 .panel-item-content .repost-box{text-align:center;}
+.panel-item-avatar{position:absolute;left:.73em;top:.73em;}
+.panel-item-header{position:absolute;top:.25em;right:.73em;}.panel-item-header .timeago,.panel-item-header .post-options{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.8em;padding:2.5px 5px;color:#000000;display:block;}
+.panel-item-header .post-options{background-color:#e2e2e2;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;display:none;}.panel-item-header .post-options a{color:#000000;display:inline-block;padding:0 5px;text-align:center;vertical-align:middle;}.panel-item-header .post-options a:hover{text-decoration:underline;}
+.panel-item-header .post-options a i{padding-right:5px;}
+.panel-item-header .post-options .view-more,.panel-item-header .post-options .view-less{display:none;}
 .panel-item-footer{display:block;font-size:0.8em;}
 .newMessage .panel-item-header .post-options{background-color:#e9ddbd;}
-.original-quip,.conversation-controls{display:none;}
+.hide-original{position:relative;display:none;}
+.original-quip{margin-top:1em;background-color:#d3d3d3;background-image:-moz-linear-gradient(top, #dddddd, #c3c3c3);background-image:-ms-linear-gradient(top, #dddddd, #c3c3c3);background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#dddddd), to(#c3c3c3));background-image:-webkit-linear-gradient(top, #dddddd, #c3c3c3);background-image:-o-linear-gradient(top, #dddddd, #c3c3c3);background-image:linear-gradient(top, #dddddd, #c3c3c3);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#c3c3c3', GradientType=0);border-color:#c3c3c3 #c3c3c3 #9d9d9d;border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);}
+.conversation-controls{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:0.9em;}.conversation-controls a{margin-right:10px;}.conversation-controls a:hover{text-decoration:underline;}
+.in-reply-to:hover{cursor:pointer;}
 #radar-panel{position:relative;overflow:hidden;padding:.889em;background-color:#aaaaaa;background-image:url('../img/vertical_stripes.png');background-position:top left;background-repeat:repeat;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;}#radar-panel:before{content:"";font-size:0;position:absolute;top:0;left:-25%;width:150%;height:100%;-webkit-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);-moz-box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);box-shadow:inset 0 0.2em 15px rgba(0, 0, 0, 0.4),inset 0 -0.1em 20px rgba(0, 0, 0, 0.4);pointer-events:none;}
 #radar-panel .thereIsMore{text-shadow:0 1px 0 rgba(255, 255, 255, 0.4);}
 #radar-panel .help-block{color:#ccc;font-size:.75em;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;}
