--- a/karl/views/static/ux2/css/elements/pushdowns.less
+++ b/karl/views/static/ux2/css/elements/pushdowns.less
@@ -47,9 +47,8 @@
         position: relative;
     }
     .avatar {
-        position: absolute;
-        left: .73em;
-        top: .73em;
+        width: 48px;
+        height: auto;
     }
     .messagewrapper {
         height: 3.2em;
