ux2 calendar: small style fix in the list view

--- a/karl/views/static/ux2/css/elements/calendar.less
+++ b/karl/views/static/ux2/css/elements/calendar.less
@@ -46,6 +46,7 @@
                 border: 0 none;
                 &.cal_agenda_time {
                     width: 15%;
+                    line-height: 2em;
                 }
             }
             th {
