--- a/karl/ux2/microtemplates/chatter.mustache
+++ b/karl/ux2/microtemplates/chatter.mustache
@@ -17,6 +17,9 @@
 
             <div class="control-group clearfix">
               <div class="controls">
+                {{#private}}
+                <input type="hidden" name="private" value="true">
+                {{/private}}
                 <textarea id="{{class}}-panel-text" name="text" class="new-post-text"></textarea>
                 <p class="help-block tips">Tips: Use @username, #tag, and #this for this page</p>
               </div>
