ux2 multifileupload css in progress

--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -895,3 +895,7 @@ small.timeago-date {
 // calendar
 @import "elements/calendar.less";
 
+
+// multifile upload
+@import "elements/multifileupload.less";
+
